# MoteurPhysX

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CheckInstall.bat  CleanAll.bat  DeleteSubDirectory.bat  Filters.cmake  Render.vcxproj  Render.vcxproj.filters  Simulation.sln  Simulation.vcxproj  Simulation.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  jobfiles.txt  jobfilesRender.txt  jobfilesSimulation.txt  rebuild_vis_sln_x64.bat  rebuiltCompiler.bat  rebuiltCompilerVs2019.bat  rebuiltCompilerVs2022.bat
API_PhysX/Lib/: LowLevelAABB.lib  LowLevelAABBDEBUG.lib  LowLevelClothDEBUG.lib  LowLevelDEBUG.lib  LowLevelParticles.lib  LowLevelParticlesDEBUG.lib  SceneQuery.lib  SceneQueryDEBUG.lib
Include/API_PhysX/Lib/: LowLevel.lib  LowLevelCloth.lib  LowLevelDynamics.lib
Include/Graphics/lib/win64/glut/: freeglut_staticd.lib  freeglutd.lib
Include/PxShared/lib/vc15win64/: PsFastXmlDEBUG_x64.lib  PsFastXml_x64.lib  PxTaskDEBUG_x64.lib  PxTask_x64.lib
Include/PxShared/src/foundation/include/: PsAllocator.h
Include/PxToolkit/lib/: PxToolkit.lib  PxToolkitDEBUG.lib  SampleFramework-MT.lib  SampleFramework-MTDEBUG.lib  SamplePlatform-MT.lib  SamplePlatform-MTDEBUG.lib
Include/SnippetRender/Lib/: RenderDEBUG.lib
Include/SnippetUtils/Lib/: SnippetUtils.lib  SnippetUtilsDEBUG.lib
Render/: SnippetCamera.cpp  SnippetCamera.h  SnippetRender.cpp  SnippetRender.h
Render/x64/Debug/: SnippetCamera.sbr
Render/x64/Debug/Render.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  bscmake.command.1.tlog  bscmake.read.1.tlog
Render/x64/Debug/SnippetRender.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  SnippetRender.lastbuildstate  bscmake.command.1.tlog  bscmake.read.1.tlog
Simulation/: Balle.cpp  Balle.h  Bot.cpp  Bot.h  ClassicMain.cpp  FilterShader.cpp  FilterShader.h  Goal.cpp  Goal.h  Incopiable.h  Minuteur.cpp  Minuteur.h  MyCallback.cpp  MyCallback.h  SampleAllocator.cpp  SampleAllocator.h  Simulation.cpp  Simulation.h  SimulationRender.cpp  SimulationRender.h  SnippetCamera.cpp  SnippetCamera.h  SnippetHelloWorld.cpp  SnippetHelloWorldRender.cpp  SnippetRender.cpp  Vehicule.cpp  Vehicule.h  commonImport.h
